[project]
name = "funfluid"
version = "1.0.1"
description = "funfluid"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "matplotlib>=3.7.5", "numpy>=1.24.4", "pandas>=2.0.3", "scipy>=1.10.1",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funfluid"
Releases = "https://github.com/farfarfun/funfluid/releases"

[tool.setuptools]
license-files = []
